syntax = "proto3";

package auth;

service v1 {
    rpc Authenticate(AuthenticateInput) returns (AuthenticateResponse) {}
    rpc Refresh(RefreshInput) returns (RefreshResponse) {}
}

message AuthenticateInput {
    string password = 1;
	string username = 2;
}

message AuthenticateResponse {
    string token = 1;
}

message RefreshInput {
    string token = 1;
}

message RefreshResponse {
    string token = 1;
}

